manifests/01-internal-connectivity.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    app: client
spec:
  nodeSelector:
    kubernetes.io/hostname: node4
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
---
apiVersion: v1
kind: Pod
metadata:
  name: echo
  labels:
    app: echo
spec:
  nodeSelector:
    kubernetes.io/hostname: node5
  containers:
    - name: endpoint-a
      image: traefik/whoami:v1.10.4
      args: ["--port", "80", "--name", "endpoint-a-80"]
      ports:
        - containerPort: 80
    - name: endpoint-b
      image: traefik/whoami:v1.10.4
      args: ["--port", "8080", "--name", "endpoint-b-8080"]
      ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  clusterIP: None
  selector:
    app: echo
  ports:
    - name: a
      port: 80
      targetPort: 80
    - name: b
      port: 8080
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: echo-allow-a-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: echo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client
      ports:
        - protocol: TCP
          port: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: client-8080
  labels:
    app: client-8080
spec:
  nodeSelector:
    kubernetes.io/hostname: node4
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      command: ["sleep", "infinity"]
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: echo-allow-client-8080-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: echo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: client-8080
      ports:
        - protocol: TCP
          port: 8080
